@@ -49,12 +49,12 @@ domain at once using @Model#int_var_array@ which returns an array of variables.
 numbers = int_var_array(8, 0..9) # Creates 8 variables with domains 0..9.
 </ruby>
 
-The domain specified does not have to be a range, it can also be a series of
-elements. The following creates an integer variable with the odd numbers in 
+The domain specified does not have to be a range, it can also be an enumeration
+of elements. The following creates an integer variable with the odd numbers in 
 0..9 as domain.
 
 <ruby>
-odd_number = int_var(1,3,5,7,9)
+odd_number = int_var([1,3,5,7,9])
 </ruby>
 
 Matrices can be created using @Model#int_var_matrix@ (returns an instance of
